--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-react": "^7.7.0",
     "@babel/register": "^7.7.0",
     "autoprefixer": "^9.7.6",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "ignore-styles": "^5.0.1",
     "postcss-cli": "^7.1.1",
@@ -40,6 +41,10 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
